--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -46,11 +52,45 @@
       </article>
     </main>
 
-    <!-- <div>
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+    <footer class="profile__footer">
+      <ul>
+        <li>
+          <a href="https://twitter.com/RitikaAgrawal08" target="_blank"
+            ><i class="fa-brands fa-twitter"></i> Twitter</a
+          >
+        </li>
+        <li>
+          <a href="https://codepen.io/RitikaAgrawal08" target="_blank"
+            ><i class="fa-brands fa-codepen"></i> CodePen</a
+          >
+        </li>
+        <li>
+          <a href="https://medium.com/@RitikaAgrawal08" target="_blank"
+            ><i class="fa-brands fa-medium"></i> Medium</a
+          >
+        </li>
+        <li>
+          <a href="https://dev.to/ritikaagrawal08" target="_blank"
+            ><i class="fa-brands fa-dev"></i> Dev.to</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/Ritika-Agrawal811" target="_blank"
+            ><i class="fa-brands fa-github"></i>GitHub</a
+          >
+        </li>
+        <li>
+          <a href="https://ritikaagrawal08.gumroad.com/" target="_blank"
+            ><i class="fa-solid fa-g"></i>Gumroad</a
+          >
+        </li>
+      </ul>
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by Ritika Agrawal.
+      </p>
+    </footer>
   </body>
 </html>
