fix: add profile footer and theme toggle to qr code challenge

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -23,10 +23,10 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body theme="light">
-    <!-- <label class="toggle__button" id="themeToggle">
+    <label class="toggle__button" id="themeToggle">
       <input type="checkbox" />
       <span class="circle"></span>
-    </label> -->
+    </label>
 
     <main>
       <article class="card">
@@ -45,7 +45,7 @@
         </p>
       </article>
     </main>
-    <!-- <footer class="profile__footer">
+    <footer class="profile__footer">
       <ul>
         <li>
           <a href="https://twitter.com/RitikaAgrawal08" target="_blank"
@@ -84,7 +84,7 @@
           >Frontend Mentor</a
         >. Coded by Ritika Agrawal.
       </p>
-    </footer> -->
+    </footer>
     <script src="scripts/index.js"></script>
   </body>
 </html>
