fix: make toggle button accessible

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -23,10 +23,12 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body theme="light">
-    <label class="toggle__button" id="themeToggle">
-      <input type="checkbox" />
-      <span class="circle"></span>
-    </label>
+    <header>
+      <button aria-pressed="false" id="themeToggle">
+        Dark/Light Mode <i class="fa-solid fa-moon icon" aria-hidden="true"></i>
+        <i class="fa-solid fa-sun icon" aria-hidden="true"></i>
+      </button>
+    </header>
 
     <main>
       <article class="card">
