fix: make theme toggle accessible

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -24,8 +24,9 @@
   </head>
   <body theme="light">
     <header>
-      <button aria-pressed="false" id="themeToggle">
-        Dark/Light Mode <i class="fa-solid fa-moon icon" aria-hidden="true"></i>
+      <span id="btn-label">Toggle Dark/Light Mode</span>
+      <button aria-pressed="false" id="themeToggle" aria-labelledby="btn-label">
+        <i class="fa-solid fa-moon icon" aria-hidden="true"></i>
         <i class="fa-solid fa-sun icon" aria-hidden="true"></i>
       </button>
     </header>
